src/zmi/styles/resources/zmi_base.css
/* ... */
.zmi-manage_menu #menu_buttons ul.dropdown-menu  {
	background-color:#646d75;
}

@media (min-width: 960px) {
	.zmi-manage_menu #menu_buttons ul.dropdown-menu {
		background-image:url("logo/Zope_white_opacity12.svg");
		background-size:97%;
		background-position: bottom center;
		background-repeat:no-repeat;

	}
}
.zmi-zope_copyright h2 {
	font-size: 130%;
	color: white;
	margin: 0;
}

/* EXAMPLE: IMPLANT YOUR LOGO */
/*
	.zmi-manage_menu {
		height:100vh;
	}
	.zmi-manage_menu,
	.zmi-manage_menu #menu_buttons ul.dropdown-menu {
		background-size:contain;
		background-position: bottom left;
		background-repeat:no-repeat;
	}
	.zmi-manage_menu {
		background-image:url("logo/Zope_black_opacity12.svg");
	}
	.zmi-manage_menu #menu_buttons ul.dropdown-menu  {
		background-image:url("logo/Zope_opacity12.svg");
	}
	@media (min-width: 768px) {
		header.navbar-nav .product {
			background-position: 0 9px;
			background-repeat:no-repeat;
			background-image:url("logo/Zope_white.svg");
			background-size:92px;
			height:42px;
			width:130px;
			display:inline-block;
			color:transparent
		}
	}
*/

